--- a/deeptopic/src/wrapper/main.hbs
+++ b/deeptopic/src/wrapper/main.hbs
@@ -18,7 +18,7 @@
 {{ body }}
 
     <!-- Scripts -->
-    {{!-- <script src="./js/modernizr.js"></script> --}}
+    <script src="./js/modernizr.js"></script>
     {{!-- <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script> --}}
     {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script> --}}
     <script src="./js/scripts.js"></script>
