--- a/resizecheck/src/pages/index.hbs
+++ b/resizecheck/src/pages/index.hbs
@@ -3,7 +3,7 @@ title: Junk Code Quick Start Page
 ---
 
 <div class="bigbox">
-    <h1>Hello world!</h1>
+    {{!-- <h1>Hello world!</h1> --}}
 </div>
 
 <div id="stats" class="fixed">
