Refining filterthings a bit.

--- a/filterthings/src/pages/index.hbs
+++ b/filterthings/src/pages/index.hbs
@@ -7,6 +7,8 @@ title: Junk Code Quick Start Page
         <button type="submit" class="filter--button" data-target="a">Group A</button>
         <button type="submit" class="filter--button" data-target="b">Group B</button>
         <button type="submit" class="filter--button" data-target="c">Group C</button>
+        <button type="submit" class="filter--button" data-target="d">Group D</button>
+        <button type="submit" class="filter--button" data-reset="true">Reset Filters</button>
     </div>
 </div>
 
@@ -26,12 +28,7 @@ title: Junk Code Quick Start Page
         <p>571F-4EF9-B3B2</p>
     </div>
     
-    <div class="item" data-group="a">
-        <p>Group A</p>
-        <p>2E25-44DD-8D26</p>
-    </div>
-    
-    <div class="item" data-group="b">
+    <div class="item" data-group="d">
         <p>Group B</p>
         <p>ACE4-44A8-B54C</p>
     </div>
@@ -51,17 +48,33 @@ title: Junk Code Quick Start Page
         <p>73A6-4770-A413</p>
     </div>
     
-    <div class="item" data-group="c">
-        <p>Group C</p>
-        <p>6F1D-44E4-8F14</p>
-    </div>
     
     <div class="item" data-group="a">
         <p>Group A</p>
         <p>DBCA-483A-9E50</p>
     </div>
     
-    <div class="item" data-group="b">
+    <div class="item" data-group="a">
+        <p>Group A</p>
+        <p>2E25-44DD-8D26</p>
+    </div>
+    
+    <div class="item" data-group="d">
+        <p>Group B</p>
+        <p>D83C-4EC5-ACBE</p>
+    </div>
+    
+    <div class="item" data-group="c">
+        <p>Group C</p>
+        <p>EB70-4AF9-80AD</p>
+    </div>
+    
+    <div class="item" data-group="d">
+        <p>Group C</p>
+        <p>6F1D-44E4-8F14</p>
+    </div>
+    
+    <div class="item" data-group="db">
         <p>Group B</p>
         <p>FEF2-4E5B-B7DB</p>
     </div>
@@ -75,17 +88,6 @@ title: Junk Code Quick Start Page
         <p>Group A</p>
         <p>0C1F-4956-B948</p>
     </div>
-    
-    <div class="item" data-group="b">
-        <p>Group B</p>
-        <p>D83C-4EC5-ACBE</p>
-    </div>
-    
-    <div class="item" data-group="c">
-        <p>Group C</p>
-        <p>EB70-4AF9-80AD</p>
-    </div>
-    
     <div class="item" data-group="a">
         <p>Group A</p>
         <p>506C-4C82-9133</p>
@@ -101,9 +103,14 @@ title: Junk Code Quick Start Page
         <p>E938-4DEB-B152</p>
     </div>
     
-    <div class="item" data-group="a">
+    <div class="item" data-group="d">
         <p>Group A</p>
         <p>B82F-4322-B40B</p>
+    </div>
+    
+    <div class="item" data-group="c">
+        <p>Group C</p>
+        <p>FD19-41B8-B249</p>
     </div>
     
     <div class="item" data-group="b">
@@ -116,7 +123,7 @@ title: Junk Code Quick Start Page
         <p>AD6A-4C47-B5FD</p>
     </div>
     
-    <div class="item" data-group="a">
+    <div class="item" data-group="d">
         <p>Group A</p>
         <p>AF0E-401A-ABDB</p>
     </div>
@@ -126,8 +133,155 @@ title: Junk Code Quick Start Page
         <p>1CD7-40EC-8165</p>
     </div>
     
-    <div class="item" data-group="c">
+    <div class="item" data-group="b">
+        <p>Group B</p>
+        <p>DE7F-4578-9EAD</p>
+    </div>
+    
+    <div class="item" data-group="d">
         <p>Group C</p>
         <p>F95A-4FEF-B51A</p>
     </div>
+
+    <div class="item" data-group="a">
+        <p>Group A</p>
+        <p>B13E-46EC-B9B1</p>
+    </div>
+    
+    <div class="item" data-group="a">
+        <p>Group A</p>
+        <p>07C8-45CE-8E7A</p>
+    </div>
+    
+    <div class="item" data-group="b">
+        <p>Group B</p>
+        <p>DD22-4C98-B280</p>
+    </div>
+    
+    <div class="item" data-group="c">
+        <p>Group C</p>
+        <p>F1CA-4D76-A86B</p>
+    </div>
+    
+    <div class="item" data-group="d">
+        <p>Group A</p>
+        <p>F780-46DA-8813</p>
+    </div>
+    
+    <div class="item" data-group="b">
+        <p>Group B</p>
+        <p>812F-4541-8E49</p>
+    </div>
+    
+    <div class="item" data-group="c">
+        <p>Group C</p>
+        <p>9E2F-4FC2-BE64</p>
+    </div>
+    
+    <div class="item" data-group="a">
+        <p>Group A</p>
+        <p>E071-4651-B6D6</p>
+    </div>
+    
+    <div class="item" data-group="b">
+        <p>Group B</p>
+        <p>E0A4-47A6-B9AB</p>
+    </div>
+    
+    <div class="item" data-group="c">
+        <p>Group C</p>
+        <p>B3D9-4083-AD02</p>
+    </div>
+    
+    <div class="item" data-group="a">
+        <p>Group A</p>
+        <p>A511-4A1D-BC36</p>
+    </div>
+    
+    <div class="item" data-group="b">
+        <p>Group B</p>
+        <p>C021-40A0-A796</p>
+    </div>
+    
+    <div class="item" data-group="c">
+        <p>Group C</p>
+        <p>D1CB-4CC0-8996</p>
+    </div>
+    
+    <div class="item" data-group="a">
+        <p>Group A</p>
+        <p>A98D-4373-8AC0</p>
+    </div>
+    
+    <div class="item" data-group="b">
+        <p>Group B</p>
+        <p>BED0-414B-B4E8</p>
+    </div>
+    
+    <div class="item" data-group="c">
+        <p>Group C</p>
+        <p>F6C5-4BA2-9FEF</p>
+    </div>
+    
+    <div class="item" data-group="a">
+        <p>Group A</p>
+        <p>237D-4662-8281</p>
+    </div>
+    
+    <div class="item" data-group="b">
+        <p>Group B</p>
+        <p>C83E-4E3B-B870</p>
+    </div>
+    
+    <div class="item" data-group="c">
+        <p>Group C</p>
+        <p>FD99-4385-AD6F</p>
+    </div>
+    
+    <div class="item" data-group="a">
+        <p>Group A</p>
+        <p>6911-42F1-9F18</p>
+    </div>
+    
+    <div class="item" data-group="b">
+        <p>Group B</p>
+        <p>C102-43B1-94A0</p>
+    </div>
+    
+    <div class="item" data-group="c">
+        <p>Group C</p>
+        <p>640D-4FD5-A9EC</p>
+    </div>
+    
+    <div class="item" data-group="a">
+        <p>Group A</p>
+        <p>7AB1-4701-A441</p>
+    </div>
+    
+    <div class="item" data-group="b">
+        <p>Group B</p>
+        <p>4D12-4817-806B</p>
+    </div>
+    
+    
+    <div class="item" data-group="d">
+        <p>Group A</p>
+        <p>A4EC-4226-A1A2</p>
+    </div>
+    
+    <div class="item" data-group="c">
+        <p>Group C</p>
+        <p>22EB-48C3-99CB</p>
+    </div>
+    <div class="item" data-group="c">
+        <p>Group C</p>
+        <p>890A-416B-B451</p>
+    </div>
+    <div class="item" data-group="d">
+        <p>Group B</p>
+        <p>E95F-4F39-812F</p>
+    </div>
+    
+    
+
 </div>
