--- a/filterthings/src/sass/styles.scss
+++ b/filterthings/src/sass/styles.scss
@@ -131,14 +131,29 @@ $min-inner-gutter-more: 4em;
   margin: 1rem;
 }
 
+.item {
+  flex-basis: 0;
+  flex-grow: 1;
+
+  max-width: calc(100% / 6 - 4rem);
+  background: rgba(#634F9C, 0.25);
+  transition: background 0.3s ease-in, color 0.3s ease-out;
+}
+
+.item[data-filtered="active"] {
+  background: rgba(#634F9C, 1);
+  color: #ffffff;
+}
+
+.item[data-filtered="faded"] {
+  background: rgba(#634F9C, 0);
+}
+
 .filter {
   flex-grow: 1;
 }
 
 .filter--button {
+  padding: 0.5rem 0 0.25rem 0;
   margin: 1rem;
-}
-
-.item.gone {
-  display: none;
 }
